[package]
name = "trade-locker-connector"
version = "0.6.6"
edition = "2021"
authors = ["gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#my-socket-io-client = { path = "my-socket-io-client" }
my-socket-io-client = { git = "https://github.com/MyJetTools/my-socket-io-client.git", tag = "0.1.2" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }

http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
futures = "*"
futures-util = { version = "*", default-features = false }
error-chain = { version = "0.12.4", default-features = false }
serde_qs = "*"
chrono = { version = "*", features = ["serde"] }
md5 = "0.7.0"
strum = { version = "0.26", features = ["derive"] }